--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <p>Kliknij przedmiot aby zobaczyć pliki.</p>
 
 <ul>
-<li><a href="matematyka/">Matematyka</a></li>
-<li><a href="polski/">Polski</a></li>
-<li><a href="historia/">Historia</a></li>
-<li><a href="biologia/">Biologia</a></li>
+<li><a href="matematyka">Matematyka</a></li>
+<li><a href="polski">Polski</a></li>
+<li><a href="historia">Historia</a></li>
+<li><a href="biologia">Biologia</a></li>
 </ul>
 
 </body>
