--- a/index.html
+++ b/index.html
@@ -1,19 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Notatki szkolne</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>📚 Notatki szkolne</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f4f4f9;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background: #4a76a8;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  }
+  h1 {
+    margin: 0;
+  }
+  section {
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+  }
+  h2 {
+    background: #d3e0f0;
+    padding: 10px;
+    border-left: 5px solid #4a76a8;
+  }
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  li {
+    background: white;
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.2s;
+  }
+  li:hover {
+    background: #e0ebf5;
+  }
+  a {
+    text-decoration: none;
+    color: #4a76a8;
+    font-weight: bold;
+  }
+</style>
 </head>
 <body>
-<h1>📚 NOTATKI SZKOLNE</h1>
-<p>Kliknij przedmiot aby zobaczyć pliki.</p>
 
-<ul>
-<li><a href="matematyka">Matematyka</a></li>
-<li><a href="polski">Polski</a></li>
-<li><a href="historia">Historia</a></li>
-<li><a href="biologia">Biologia</a></li>
-</ul>
+<header>
+  <h1>📚 Notatki szkolne</h1>
+  <p>Kliknij na plik, aby pobrać</p>
+</header>
+
+<section>
+  <h2>Matematyka</h2>
+  <ul>
+    <li><a href="matematyka/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
+    <li><a href="matematyka/notatka2.pdf" target="_blank">notatka2.pdf</a></li>
+    <!-- Dodaj kolejne pliki matematyka tutaj -->
+  </ul>
+
+  <h2>Polski</h2>
+  <ul>
+    <li><a href="polski/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
+    <!-- Dodaj kolejne pliki polski tutaj -->
+  </ul>
+
+  <h2>Historia</h2>
+  <ul>
+    <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+    <!-- Dodaj kolejne pliki historia tutaj -->
+  </ul>
+
+  <h2>Biologia</h2>
+  <ul>
+    <li><a href="biologia/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
+    <!-- Dodaj kolejne pliki biologia tutaj -->
+  </ul>
+</section>
 
 </body>
 </html>
