--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <h2>Polski</h2>
   <ul>
-    <li><a href="polski/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
+    <li><a href="polski/notatka1.odt" target="_blank">notatka1.pdf</a></li>
     <!-- Dodaj kolejne pliki polski tutaj -->
   </ul>
 
