--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <h2>Historia</h2>
   <ul>
-    <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+    <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
     <!-- Dodaj kolejne pliki historia tutaj -->
   </ul>
 
