--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
     font-weight: bold;
   }
 
-  /* Strzałka obrócona w dół po rozwinięciu */
   .expanded .arrow {
     transform: rotate(90deg);
   }
@@ -113,9 +112,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="matematyka/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
-        <li><a href="matematyka/notatka2.pdf" target="_blank">notatka2.pdf</a></li>
-        <!-- Dodaj kolejne pliki matematyka tutaj -->
+        <li><a href="matematyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
@@ -126,8 +123,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="polski/notatka1.odt" target="_blank">notatka1.odt</a></li>
-        <!-- Dodaj kolejne pliki polski tutaj -->
+        <li><a href="polski/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
@@ -138,8 +134,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
-        <!-- Dodaj kolejne pliki historia tutaj -->
+        <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
@@ -150,8 +145,118 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="biologia/notatka1.pdf" target="_blank">notatka1.pdf</a></li>
-        <!-- Dodaj kolejne pliki biologia tutaj -->
+        <li><a href="biologia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- NOWE PRZEDMIOTY -->
+  <div class="subject">
+    <div class="subject-header">
+      Biznes i zarządzanie <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="biznes_i_zarzadzanie/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Chemia <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="chemia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      EDB <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="edb/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Fizyka <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="fizyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Geografia <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="geografia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Informatyka <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="informatyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Język angielski <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="angielski/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Język hiszpański <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="hiszpanski/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      Muzyka <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="muzyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="subject">
+    <div class="subject-header">
+      INNE <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="inne/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
