--- a/index.html
+++ b/index.html
@@ -106,6 +106,29 @@
 </header>
 
 <section>
+  
+    <div class="subject">
+    <div class="subject-header">
+      Biologia <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="biologia/Aminokwasy.pdf" target="_blank">Aminokwasy</a></li>
+      </ul>
+    </div>
+  </div>
+
+    <div class="subject">
+    <div class="subject-header">
+      Geografia <span class="arrow">▶</span>
+    </div>
+    <div class="subject-content">
+      <ul>
+        <li><a href="geografia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+      </ul>
+    </div>
+  </div>
+  
   <div class="subject">
     <div class="subject-header">
       Matematyka <span class="arrow">▶</span>
@@ -135,17 +158,6 @@
     <div class="subject-content">
       <ul>
         <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Biologia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="biologia/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
@@ -191,17 +203,6 @@
     <div class="subject-content">
       <ul>
         <li><a href="fizyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Geografia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="geografia/placeholder.txt" target="_blank">placeholder.txt</a></li>
       </ul>
     </div>
   </div>
