--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📚 Notatki szkolne</title>
+<title>📚 Notatki szkolne + Terminarz</title>
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -21,9 +21,7 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
 
-  header h1 {
-    margin: 0;
-  }
+  header h1 { margin: 0; }
 
   section {
     max-width: 800px;
@@ -50,13 +48,9 @@
     font-size: 1.1em;
   }
 
-  .subject-header:hover {
-    background: #c0d7ed;
-  }
+  .subject-header:hover { background: #c0d7ed; }
 
-  .arrow {
-    transition: 0.3s;
-  }
+  .arrow { transition: 0.3s; }
 
   .subject-content {
     max-height: 0;
@@ -77,25 +71,51 @@
     transition: 0.2s;
   }
 
-  .subject-content li:hover {
-    background: #e0ebf5;
-  }
+  .subject-content li:hover { background: #e0ebf5; }
 
-  a {
-    text-decoration: none;
-    color: #4a76a8;
-    font-weight: bold;
-  }
+  a { text-decoration: none; color: #4a76a8; font-weight: bold; }
 
-  .expanded .arrow {
-    transform: rotate(90deg);
-  }
+  .expanded .arrow { transform: rotate(90deg); }
 
   @media (max-width: 600px) {
-    .subject-header {
-      font-size: 1em;
-    }
+    .subject-header { font-size: 1em; }
   }
+
+  /* TERMINARZ */
+  #open-calendar {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    background: #4a76a8;
+    color:white;
+    border:none;
+    padding:10px 15px;
+    border-radius:5px;
+    cursor:pointer;
+  }
+
+  #calendar-modal {
+    display:none;
+    position:fixed;
+    top:50px; left:50%; transform:translateX(-50%);
+    width:90%; max-width:600px; height:80%;
+    background:white; border:2px solid #4a76a8; border-radius:10px;
+    overflow:auto; padding:20px; box-shadow:0 4px 10px rgba(0,0,0,0.3);
+    z-index:1000;
+  }
+
+  #calendar-modal button#close-calendar {
+    float:right; background:none; border:none; font-size:18px; cursor:pointer;
+  }
+
+  .event { padding:5px 8px; border-radius:4px; margin:3px 0; }
+
+  .sprawdzian { background:#ff4c4c; color:white; }
+  .kartkowka { background:#ffcc00; color:black; }
+  .inne { background:#4a76a8; color:white; }
+
+  .today { border:2px solid #4caf50; padding:5px 8px; border-radius:4px; }
 </style>
 </head>
 <body>
@@ -105,167 +125,21 @@
   <p>Kliknij przedmiot, aby zobaczyć pliki</p>
 </header>
 
+<button id="open-calendar">TERMINARZ</button>
+
+<div id="calendar-modal">
+  <button id="close-calendar">✖</button>
+  <h2>📅 Terminarz</h2>
+  <div id="calendar-content">Ładowanie...</div>
+</div>
+
 <section>
-  
-    <div class="subject">
-    <div class="subject-header">
-      Biologia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="biologia/Aminokwasy.pdf" target="_blank">Aminokwasy</a></li>
-      </ul>
-    </div>
-  </div>
-
-    <div class="subject">
-    <div class="subject-header">
-      Geografia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="geografia/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="subject">
-    <div class="subject-header">
-      Matematyka <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="matematyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Polski <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="polski/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Historia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- NOWE PRZEDMIOTY -->
-  <div class="subject">
-    <div class="subject-header">
-      Biznes i zarządzanie <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="biznes_i_zarzadzanie/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Chemia <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="chemia/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      EDB <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="edb/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Fizyka <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="fizyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Informatyka <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="informatyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Język angielski <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="angielski/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Język hiszpański <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="hiszpanski/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      Muzyka <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="muzyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="subject">
-    <div class="subject-header">
-      INNE <span class="arrow">▶</span>
-    </div>
-    <div class="subject-content">
-      <ul>
-        <li><a href="inne/placeholder.txt" target="_blank">placeholder.txt</a></li>
-      </ul>
-    </div>
-  </div>
-
+  <!-- PRZEDMIOTY (Twój aktualny kod) -->
+  <!-- Wklej tu wszystkie divy .subject jak w Twoim HTML, np. Biologia, Geografia, Matematyka itd. -->
 </section>
 
 <script>
-  // Skrypt do rozwijania list
+  // Rozwijanie list przedmiotów
   const subjects = document.querySelectorAll('.subject');
   subjects.forEach(subject => {
     const header = subject.querySelector('.subject-header');
@@ -281,6 +155,48 @@
       }
     });
   });
+
+  // TERMINARZ - otwieranie/zamykanie
+  const openBtn = document.getElementById('open-calendar');
+  const closeBtn = document.getElementById('close-calendar');
+  const modal = document.getElementById('calendar-modal');
+
+  openBtn.addEventListener('click', ()=> modal.style.display='block');
+  closeBtn.addEventListener('click', ()=> modal.style.display='none');
+
+  // Pobieranie wydarzeń z Google Sheets
+  const sheetId = "1G57zZRVzq0zuu4wTAXht6DzttC7bgVdJSdd4sdxGx-Q";
+  const url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`;
+
+  fetch(url)
+    .then(res => res.text())
+    .then(data => {
+      const jsonData = JSON.parse(data.substr(47).slice(0, -2));
+      const rows = jsonData.table.rows;
+      const container = document.getElementById("calendar-content");
+      container.innerHTML = '';
+      const today = new Date().toISOString().split('T')[0];
+
+      rows.forEach(row => {
+        const date = row.c[0] ? row.c[0].v : '';
+        const subject = row.c[1] ? row.c[1].v : '';
+        const type = row.c[2] ? row.c[2].v.toLowerCase() : '';
+        const desc = row.c[3] ? row.c[3].v : '';
+
+        const div = document.createElement('div');
+        div.textContent = `${date} | ${subject} | ${type} | ${desc}`;
+        div.classList.add('event');
+
+        if(type.includes('sprawdzian')) div.classList.add('sprawdzian');
+        else if(type.includes('kartkówka')) div.classList.add('kartkowka');
+        else div.classList.add('inne');
+
+        if(date === today) div.classList.add('today');
+
+        container.appendChild(div);
+      });
+    })
+    .catch(err => console.log(err));
 </script>
 
 </body>
