--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="geografia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="geografia/Ruch_Obiegowy_Czasnaziemi.pdf" target="_blank">Ruch Obiegowy i Czas na Ziemi</a></li>
       </ul>
     </div>
   </div>
@@ -212,7 +212,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="matematyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -224,7 +224,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="polski/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -236,7 +236,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="historia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
       </ul>
     </div>
   </div>
@@ -248,7 +248,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="biznes_i_zarzadzanie/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="biznes_i_zarzadzanie/SPRAWDZIAN1.pdf" target="_blank">Sprawdzian z działu 1 Przedsiębiorca</a></li>
       </ul>
     </div>
   </div>
@@ -260,7 +260,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="chemia/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="chemia/wiazania_oddzialywanie.pdf" target="_blank">Wiązania chemiczne i oddziaływanie międzycząsteczkowe</a></li>
       </ul>
     </div>
   </div>
@@ -272,7 +272,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="edb/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="edb/EDB_alarmowanie_i_ostrzeganie.pdf" target="_blank">Alarmowanie i Ostrzeganie</a></li>
       </ul>
     </div>
   </div>
@@ -284,7 +284,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="fizyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -296,7 +296,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="informatyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -308,7 +308,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="angielski/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -320,7 +320,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="hiszpanski/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="hiszpanski/La_Familia.pdf" target="_blank">La Familia (rodzina)</a></li>
       </ul>
     </div>
   </div>
@@ -332,7 +332,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="muzyka/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
@@ -344,7 +344,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="inne/placeholder.txt" target="_blank">placeholder.txt</a></li>
+        <li><a href="." target="_blank">.</a></li>
       </ul>
     </div>
   </div>
